Build results of 08ff57b (on master)

--- a/Changes
+++ b/Changes
@@ -1,6 +1,4 @@
-Revision history for {{$dist->name}}
-
-{{$NEXT}}
+Revision history for Dist-Zilla-Util-Test-KENTNL
 
 0.01000001 2010-11-03 18:02:07 Pacific/Auckland
           First version.
