--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Packaging]
+  - Move to @Author::KENTNL
 
 0.01000510 2010-11-09 03:01:08 Pacific/Auckland
           Fix ns::ac problems.
