--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-    Dist::Zilla::Util::Test::KENTNL - KENTNL's DZil plugin testing tool.
+    Dist::Zilla::Util::Test::KENTNL - KENTNL's DZil plugin testing tool
 
 VERSION
-    version 1.000000
+    version 0.010158
 
 METHODS
   test_config
