Build results of 52ae64e (on master)

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-    Dist::Zilla::Util::Test::KENTNL - KENTNL's DZil plugin testing tool.
+    Dist::Zilla::Util::Test::KENTNL - KENTNL's DZil plugin testing tool
 
 VERSION
-    version 0.01015824
+    version 1.000000
 
 METHODS
   test_config
@@ -97,7 +97,7 @@ AUTHOR
     Kent Fredric <kentnl@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2013 by Kent Fredric <kentnl@cpan.org>.
+    This software is copyright (c) 2014 by Kent Fredric <kentnl@cpan.org>.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
