Build results of 08efe2a (on master)

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-Util-Test-KENTNL
 
 1.000001 2014-07-13T18:09:40Z
+ [00 Trivial]
+ - Minor packaging changes.
+
  [Dependencies::Stats]
  - Dependencies changed since 1.000000, see misc/*.deps* for details
  - configure: (recommends: ↑1)
