Update automated changes

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000001, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
+ - test: +2 ↑1 (recommends: +1)
 
 1.000001 2014-07-13T18:11:06Z
  [00 Trivial]
