--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.003002, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
 
 1.003002 2014-09-07T09:07:01Z
  [00 Bugfix]
