--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Bugfix]
+ - spew_raw to avoid \r\n translation on Win32
+
  [Dependencies::Stats]
  - Dependencies changed since 1.003002, see misc/*.deps* for details
  - develop: (suggests: ↑1)
