--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 1.003003, see misc/*.deps* for details
- - develop: (suggests: ↑1)
+ - develop: +3 ↑1 (suggests: ↑1)
  - runtime: +1
  - test: +1
 
