--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 1.004001, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
 
 1.004001 2014-10-30T12:56:17Z cab1d68
  [Bugfix]
