--- a/Changes
+++ b/Changes
@@ -3,8 +3,9 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 1.004002, see misc/*.deps* for details
- - develop: +1 -1
- - runtime: +1 -1 (recommends: +1)
+ - develop: +1 -1 (recommends: ↑1)
+ - runtime: +1 -1 (recommends: +1 ↑1)
+ - test: (recommends: ↑1)
 
  [Features]
  - Now optionally uses Test::TempDir::Tiny for the temporary directory.
