Build results of 74bdb2d (on master)

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 Dist::Zilla::Util::Test::KENTNL
 
+This module is KENTNL's kit for testing Dist::Zilla.
 
+Most of his modules should be moving to using the `dztest` model instead
+which is more flexible source side.
 
 INSTALLATION
 
