--- a/Changes
+++ b/Changes
@@ -4,12 +4,14 @@ Revision history for {{$dist->name}}
  [Dependencies::Stats]
  - Dependencies changed since 1.005010, see misc/*.deps* for details
  - configure: ↓1
+ - develop: +1
  - runtime: ↓1 -1
  - test: ↓1
 
  [Minor]
  - Drop utf8 and 5.008 minimums. Had intended to do this in previous release, but slipped my mind.
  - Some doc fixes too.
+ - Avoid issues with older chainsmokes needing sanity
 
 1.005010 2015-04-11T10:03:55Z 63f0907
  [Dependencies::Stats]
