--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 1.005012, see misc/*.deps* for details
- - develop: +2 (suggests: ↑2)
+ - develop: +5 -1 (suggests: ↑2)
 
 1.005012 2015-04-13T03:25:53Z 2f733bb
  [Tests]
